Logo size fix on mobile

--- a/src/components/layout/TopNav/TopNav.module.css
+++ b/src/components/layout/TopNav/TopNav.module.css
@@ -28,11 +28,3 @@
     max-width: initial;
   }
 }
-@media (max-width: 575px) {
-  .lsLogo {
-    display: none;
-  }
-  .search {
-    max-width: initial;
-  }
-}
